// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogActions should match the snapshot 1`] = `
<styled.div
  alignItems="flex-end"
  flexDirection="column"
  height="40px"
  justifyContent="center"
  width="100%"
/>
`;

exports[`DialogActions should match the snapshot with children 1`] = `
<styled.div
  alignItems="flex-end"
  flexDirection="column"
  height="40px"
  justifyContent="center"
  width="100%"
>
  <h1>
    Mock
  </h1>
</styled.div>
`;
